--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <connection>scm:git@github.com:har/ballroom.git</connection>
         <developerConnection>scm:git:git@github.com:hal/ballroom.git</developerConnection>
         <url>git@github.com:hal/ballroom.git</url>
-      <tag>2.1.8</tag>
+		<tag>2.1.8</tag>
   </scm>
 
 
@@ -82,7 +82,7 @@
         <gwt-log.version>3.2.1</gwt-log.version>
         <gin.version>2.1.2</gin.version>
         <guice.version>3.0</guice.version>
-        <gwt.version>2.6.1</gwt.version>
+        <gwt.version>2.8.0.20150826</gwt.version>
         <gwtp.version>1.2.1</gwtp.version>
         <junit.version>4.11</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -101,11 +101,6 @@
                 <groupId>org.jboss.ballroom</groupId>
                 <artifactId>widgets</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-servlet</artifactId>
-                <version>${gwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
@@ -263,8 +258,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <showDeprecation>false</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <optimize>true</optimize>
