--- a/widgets/pom.xml
+++ b/widgets/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.jboss.ballroom</groupId>
         <artifactId>ballroom</artifactId>
-        <version>2.1.11.Final</version>
+        <version>2.1.12-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
