--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <description>Common Red Hat GWT style</description>
     <groupId>org.jboss.ballroom</groupId>
     <artifactId>ballroom</artifactId>
-    <version>2.1.13-SNAPSHOT</version>
+    <version>2.1.13</version>
     <packaging>pom</packaging>
 
 
