HAL-1350 Add support to reset form values for complex attributes

--- a/widgets/src/main/java/org/jboss/ballroom/client/UIConstants.properties
+++ b/widgets/src/main/java/org/jboss/ballroom/client/UIConstants.properties
@@ -7,3 +7,5 @@ common_label_add=Add
 common_label_remove=Remove
 common_label_cancel=Cancel
 common_label_confirm=Confirm
+reset_title=Reset attributes
+reset_description=Do you really want to reset the resource ? All attributes will be undefined or reset to its default value (if any).
